# RayTracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: Application.h  BVHNode.h  Camera.h  CoordinateSystem.h  Data.h  Edit.h  Light.h  Material.h  Mesh.h  Model.h  Quad.h  Scene.h  SceneEditor.h  Settings.h  Shader.h  UBO.h  Utilities.h  Utils.h
shaders/: shader.frag  shader.vert
src/: Application.cpp  BVHNode.cpp  Camera.cpp  CoordinateSystem.cpp  Data.cpp  Edit.cpp  Mesh.cpp  Model.cpp  Quad.cpp  Scene.cpp  SceneEditor.cpp  Shader.cpp  UBO.cpp  main.cpp
